fixed scrollbar

--- a/src/styles/blocks/content.scss
+++ b/src/styles/blocks/content.scss
@@ -16,9 +16,9 @@
       content: "";
       position: absolute;
       right: 0;
-      bottom: 0;
+      bottom: 12px;
       height: 100%;
-      width: 150px;
+      width: 70px;
       background: linear-gradient(270.17deg, #FFFFFF 9.25%, rgba(255, 255, 255, 0) 188.53%);
       border-right: .0625rem solid #efefef;
     }
